package com.qiding.design;

public class ComponentImpl implements Component {
    @Override
    public void method() {
        System.out.println("我的功能");
    }
}
