@startuml
     interface Component{
        + operation():void
     }

     class ComponentImpl{
        + operation():void
     }

     class Decorator{
         # component:Component
         + Decorator(Component component):void
         + operation():void
     }

     class DecoratorImpl{
         + DecoratorImpl(Component component):void
         + addFunction():void
         + operation():void
     }

    Component<|.. Decorator
    Component<|. ComponentImpl
    Decorator<|-- DecoratorImpl
    Component --o Decorator




@enduml